# sdk-softbank-fota

./: .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig  README.md  west.yml
.github/workflows/: build-using-docker.yml  docs.yml
doc/: API_documentation.rst  CHANGELOG.rst  Doxyfile  conf.py  index.rst  integration.rst  links.txt  provisioning.rst  requirements.txt  sample.rst  shortcuts.txt
doc/_doxygen/: main.md
lib/: CMakeLists.txt  Kconfig
sample/: CMakeLists.txt  prj.conf  sample.yaml
sample/src/: main.c  ping.c  shell.c
zephyr/: module.yml
